--- a/css/home.css
+++ b/css/home.css
@@ -131,7 +131,7 @@ nav .profile-area button{
 /* SIDEBAR MENU */
 main{
     display: grid;
-    grid-template-columns: 16rem auto 30rem;
+    grid-template-columns: 16rem auto;
     gap: 2rem;
     width: 96%;
     margin: 1rem auto 4rem;
