--- a/css/metas.css
+++ b/css/metas.css
@@ -1,13 +1,12 @@
 .section-metas {
     color: rgb(0, 0, 0);
-    font-size: 16px;
-    margin-top: 50px;
+    font-size: 18px;
     gap: 20px;
     cursor: pointer;
 }
 
 .saldo {
-    display: flex;
+    margin-left: 50px;
     align-items: center;
 }
 
@@ -17,6 +16,7 @@ p {
 
 .container-educacao {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -24,6 +24,7 @@ p {
 
 .container-laser {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -31,6 +32,7 @@ p {
 
 .container-saude {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -38,6 +40,7 @@ p {
 
 .container-transporte {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -45,6 +48,7 @@ p {
 
 .container-contas-a-pagar {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -52,6 +56,7 @@ p {
 
 .container-mercado {
     background-color: #2f75d0;
+    margin-right: 40%;
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 0 10px 30px;
@@ -73,16 +78,17 @@ details[open] summary::before {
     transform: rotate(90deg);
 }
 
-
 .barra {
-    width: 300px;
-    height: 20px;
+    width: 90%;
+    height: 90%;
     border-radius: 10px;
     background-color: #ccc;
 }
 
 .barra div {
-    height: 100%;
+    width: 300px;
+    height: 20px;
+
     border-radius: 10px;
     background-color: #3ACFEF;
     transition: all 300ms;
